--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio do Mateus</title>
 
+    <link rel="shortcut icon" href="./assets/img/iconnonebg.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -50,7 +51,7 @@
                                 <a href="https://wa.me/qr/3MJV6HAAJ4DGK1" target="_blank">Telefone: (11) 9 9855-1508</a>
                             </li>
                             <li>
-                                <a href="https://www.google.com/search?q=Rua+S%C3%A9rgio+Ribeiro+da+Silva%2C+430+-+Bonan%C3%A7a%2C+Osasco+-+SP&rlz=1C1GCEA_enBR931BR931&tbm=lcl&ei=7lZ3YI6fDLez5OUPgLibqAM&oq=rua+sergio+ribeiro+da+silva%2C+430&gs_l=psy-ab.1.0.38.9703.10382.0.11880.2.2.0.0.0.0.135.246.0j2.2.0....0...1c.1.64.psy-ab..0.2.245....0.u9sbPsxKGPY#rlfi=hd:;si:7744351076277071211;mv:[[-23.48634860632746,-46.791831905279544],[-23.48909885938414,-46.795072013769534],null,[-23.4877237400268,-46.79345195952454],18]" target="_blank">Endereço: Rua Sérgio Ribeiro da Silva, 430 Bonança - Osasco - SP</a>
+                                <a href="https://www.google.com/search?q=Rua+S%C3%A9rgio+Ribeiro+da+Silva%2C+430+-+Bonan%C3%A7a%2C+Osasco+-+SP&rlz=1C1GCEA_enBR931BR931&tbm=lcl&ei=7lZ3YI6fDLez5OUPgLibqAM&oq=rua+sergio+ribeiro+da+silva%2C+430&gs_l=psy-ab.1.0.38.9703.10382.0.11880.2.2.0.0.0.0.135.246.0j2.2.0....0...1c.1.64.psy-ab..0.2.245....0.u9sbPsxKGPY#rlfi=hd:;si:7744351076277071211;mv:[[-23.48634860632746,-46.791831905279544],[-23.48909885938414,-46.795072013769534],null,[-23.4877237400268,-46.79345195952454],18]" target="_blank">Endereço: Rua Sérgio Ribeiro da Silva, Bonança - Osasco - SP</a>
                             </li>
                         </ul>
                     </div>
@@ -79,23 +80,24 @@
                                         
                         <section>
                             <span class="topo-direita"></span>
-                            <h2>Especialidades Web</h2>
+                            <h2>Habilidades e ferramentas Web</h2>
                             <ul>
                                 <li>HTML 5</li>
                                 <li>CSS 3</li>
-                                <li>Python 3</li>
-                                <li>Design de logos</li>
+                                <li>Figma</li>
+                                <li>Canva</li>
                             </ul>
                             <span class="baixo-esquerda"></span>
                         </section>
 
                         <section>
                             <span class="topo-direita"></span>
-                            <h2>Cursos</h2>
+                            <h2>Tecnologias em estudo</h2>
                             <ul>
-                                <li>HTML 5 - Kenzie Academy</li>
-                                <li>CSS 3 - Kenzie Academy</li>
-                                <li>Python 3 - <!-- <a href="https://www.even3.com.br/documentos/imprimir?i=4879005.2467434.6.5.037668245349458&cc=6957df2f-1a4d-4430-a648-849ba1dc0537" target="_blank">-->ByLearn</a></li>
+                                <li>HTML - Kenzie Academy e Rocketseat</li>
+                                <li>CSS - Kenzie Academy e Rocketseat</li>
+                                <li>JavaScript - Rocketseat</li>
+                                <li>Python - ByLearn</li>
                             </ul>
                             <span class="baixo-esquerda"></span>
                         </section>
@@ -217,11 +219,8 @@
                 <nav>
                     <ul class="info-contato">
                         <li>
-                            <a href="mailto:tommattih@gmail.com">Email: tommattih@gmail.com</a>
-                        </li>
-                        
-                        <li>
-                            <a href="https://www.google.com/search?q=Rua+S%C3%A9rgio+Ribeiro+da+Silva%2C+430+-+Bonan%C3%A7a%2C+Osasco+-+SP&rlz=1C1GCEA_enBR931BR931&tbm=lcl&ei=7lZ3YI6fDLez5OUPgLibqAM&oq=rua+sergio+ribeiro+da+silva%2C+430&gs_l=psy-ab.1.0.38.9703.10382.0.11880.2.2.0.0.0.0.135.246.0j2.2.0....0...1c.1.64.psy-ab..0.2.245....0.u9sbPsxKGPY#rlfi=hd:;si:7744351076277071211;mv:[[-23.48634860632746,-46.791831905279544],[-23.48909885938414,-46.795072013769534],null,[-23.4877237400268,-46.79345195952454],18]" target="_blank">Rua Sérgio Ribeiro da Silva, 430 - Bonança - Osasco - SP</a>
+                            <a href="mailto:tommattih@gmail.com">Email: tommattih@gmail.com</a>                        
+                            <p><!-- <a href="https://www.google.com/search?q=Rua+S%C3%A9rgio+Ribeiro+da+Silva%2C+430+-+Bonan%C3%A7a%2C+Osasco+-+SP&rlz=1C1GCEA_enBR931BR931&tbm=lcl&ei=7lZ3YI6fDLez5OUPgLibqAM&oq=rua+sergio+ribeiro+da+silva%2C+430&gs_l=psy-ab.1.0.38.9703.10382.0.11880.2.2.0.0.0.0.135.246.0j2.2.0....0...1c.1.64.psy-ab..0.2.245....0.u9sbPsxKGPY#rlfi=hd:;si:7744351076277071211;mv:[[-23.48634860632746,-46.791831905279544],[-23.48909885938414,-46.795072013769534],null,[-23.4877237400268,-46.79345195952454],18]" target="_blank"></a> -->Rua Sérgio Ribeiro da Silva - Bonança - Osasco - SP</p>
                             <!-----23.440063, -46.776562 future-->
                         </li>
                     </ul>    
