--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio do Mateus</title>
+    <title>Tom Lins - CV Page</title>
 
     <link rel="shortcut icon" href="./assets/img/iconnonebg.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -31,10 +31,12 @@
                     <!-- CAIXA FOTO DE PERFIL --> 
 
                     <div class="coluna coluna-esquerda">
-                        <figure>
-                            <img src="./assets/img/profile.jpeg" alt="Mateus Tomas">
-                            <figcaption class="hidden">Foto do Mateus #Pracegover Fundo e camiseta cinza, um rapaz de cabelo escuro curto, cavanhaque e óculos.</figcaption>
-                        </figure>
+                        <a href="./home.html">
+                            <figure>
+                                <img src="./assets/img/profile.jpeg" alt="Mateus Tomas">
+                                <figcaption class="hidden">Foto do Mateus #Pracegover Fundo e camiseta cinza, um rapaz de cabelo escuro curto, cavanhaque e óculos.</figcaption>
+                            </figure>
+                        </a>
                     </div>
 
                     <!-- INFORMAÇÕES PESSOAIS -->
@@ -138,7 +140,7 @@
                             <ul>
                                 <li>
                                     <h3>Mensageiro Hospitalar</h3>
-                                    <strong>Hospital Metropolitano Lapa - 6x1 - CLT</strong>
+                                    <strong>Hospital Metropolitano Lapa - CLT</strong>
                                     <p><em>Abril de 2019 - Abril de 2020</em> </p>
                                     <p>Entrega interna de materiais e medicações, abastecimento das farmácias satélites e ponte de comunicação rápida entre enfermagem e farmácia.</p>
                                 </li>
@@ -152,7 +154,7 @@
 
                                 <li>
                                     <h3>Cumim</h3>
-                                    <strong>P.F. Chang's Brasil - 6x1 - CLT</strong>
+                                    <strong>P.F. Chang's Brasil - CLT</strong>
                                     <p><em>Outubro de 2014 - Julho de 2015</em></p> 
                                     <p>Limpeza de mesas, entrega de pedidos, montagem de bandejas e galheteiros, limpeza da área de trabalho, auxílio no pré-preparo de alimentos e finalizações de sobremesas.</p>
                                 </li>
@@ -202,14 +204,14 @@
 
                         <li>
                             <a href="https://www.99freelas.com.br/user/Tommattih" target="_blank">
-                                <img src="./assets/img/99.png" alt="99Freelas">
+                                <img src="./assets/img/99.svg" alt="99Freelas">
                                 <p>99Freelas</p>
                             </a>
                         </li>
 
                         <li>
                             <a href="https://app.rocketseat.com.br/me/mateus-tomas-lins-05732" target="_blank">
-                                <img src="./assets/img/rocketseat.png" alt="Rocketseat">
+                                <img src="./assets/img/rocketseat.svg" alt="Rocketseat">
                                 <p>Rocketseat</p>
                             </a>
                         </li>
