--- a/site.html
+++ b/site.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom Lins - CV Page</title>
 
-    <link rel="shortcut icon" href="./assets/img/iconnonebg.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/icon-no-bg.svg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -31,12 +31,10 @@
                     <!-- CAIXA FOTO DE PERFIL --> 
 
                     <div class="coluna coluna-esquerda">
-                        <a href="/index.html">
-                            <figure>
-                                <img src="./assets/img/profile.jpeg" alt="Mateus Tomas">
-                                <figcaption class="hidden">Foto do Mateus #Pracegover Fundo e camiseta cinza, um rapaz de cabelo escuro curto, cavanhaque e óculos.</figcaption>
-                            </figure>
-                        </a>
+                        <figure>
+                            <img src="./assets/img/profile.jpeg" alt="Mateus Tomas">
+                            <figcaption class="hidden">Foto do Mateus #Pracegover Rapaz de cabelo curto, cavanhaque e óculos.</figcaption>
+                        </figure>
                     </div>
 
                     <!-- INFORMAÇÕES PESSOAIS -->
@@ -215,6 +213,14 @@
                                 <p>Rocketseat</p>
                             </a>
                         </li>
+
+                        <li>
+                            <a href="/index.html">
+                                <img src="./assets/img/icon-solid.svg" alt="Página Inicial">
+                                <p>Página inicial</p>
+                            </a>
+                        </li>
+
                     </ul>
                 </nav>
                 
@@ -222,11 +228,14 @@
                     <ul class="info-contato">
                         <li>
                             <a href="mailto:tommattih@gmail.com">Email: tommattih@gmail.com</a>                        
-                            <p><!-- <a href="https://www.google.com/search?q=Rua+S%C3%A9rgio+Ribeiro+da+Silva%2C+430+-+Bonan%C3%A7a%2C+Osasco+-+SP&rlz=1C1GCEA_enBR931BR931&tbm=lcl&ei=7lZ3YI6fDLez5OUPgLibqAM&oq=rua+sergio+ribeiro+da+silva%2C+430&gs_l=psy-ab.1.0.38.9703.10382.0.11880.2.2.0.0.0.0.135.246.0j2.2.0....0...1c.1.64.psy-ab..0.2.245....0.u9sbPsxKGPY#rlfi=hd:;si:7744351076277071211;mv:[[-23.48634860632746,-46.791831905279544],[-23.48909885938414,-46.795072013769534],null,[-23.4877237400268,-46.79345195952454],18]" target="_blank"></a> -->Rua Sérgio Ribeiro da Silva - Bonança - Osasco - SP</p>
-                            <!-----23.440063, -46.776562 future-->
+                            <p>Rua Sérgio Ribeiro da Silva - Bonança - Osasco - SP</p>
+                            <!-----23.440063, -46.776562 comming soon-->
+                            <!-- eventualmente identar o <p> pra encurtar o css -->
                         </li>
                     </ul>    
                 </nav>
+
+
             </div>
         </footer>
     </div>
