--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tom Lins - Home</title>
 
     <!-- Icone da aba -->
-    <link rel="shortcut icon" href="./assets/img/icon-no-bg.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/icon-solid-bg.svg" type="image/x-icon">
 
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
