--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
             <div class="intro">
                 <p><strong>A</strong>s tecnologias evoluem constantemente, e em uma velocidade extraordinária, apenas os meios físicos já não dão mais conta de suprir as necessidades da vida moderna, onde tudo está integrado a internet e ao alcance de poucos cliques ou toques no smartphone.</p>
-                <p>Como um estudante das tecnologias de design e desenvolvimento, trago em forma de portifólio meus aprendizados e descobertas, aplicados a minha própria identidade visual e alguns outros protótipos e projetos. Sempre buscando destacar as forças da marca e da personalidade a ser representada.</p>
-                <p>Com isso em mente, voltei meu foco em direção ao futuro, onde a meta é trazer o seu negócio para o mundo digital, aumentando o seu alcance.</p></h2>
+                <p>Como um estudante das tecnologias de design e desenvolvimento, trago em forma de portifólio meus aprendizados e descobertas, aplicados a minha própria identidade visual e alguns outros <a href="https://tommattih.github.io/PVSN/" placeholder="Página do projeto PVSN em construção" alt="Página do projeto PVSN">protótipos</a> e projetos. Sempre buscando destacar as forças da marca e da personalidade a ser representada.</p>
+                <p>Com isso em mente, voltei meu foco em direção ao futuro, onde a meta é trazer o seu negócio para o mundo digital, aumentando o seu alcance.</p>
             </div>
             
         </header>
