--- a/site.html
+++ b/site.html
@@ -176,21 +176,21 @@
                     <ul class="redes-sociais">
                         <li>
                             <a href="https://www.linkedin.com/in/tommattih/" target="_blank">
-                                <img src="./assets/img/makefg.png" alt="Linkedin">
+                                <img src="./assets/img/makefg.svg" alt="Linkedin">
                                 <p>Linkedin</p>
                             </a>
                         </li>
 
                         <li>
                             <a href="https://github.com/Tommattih" target="_blank">
-                                <img src="./assets/img/github-white-square.png" alt="Github">
+                                <img src="./assets/img/github-white-square.svg" alt="Github">
                                 <p>Github</p>
                             </a>
                         </li>
 
                         <li>
                             <a href="https://wa.me/qr/3MJV6HAAJ4DGK1">
-                                <img src="./assets/img/whatsapp-white.png" alt="Whatsapp">
+                                <img src="./assets/img/whatsapp-white.svg" alt="Whatsapp">
                                 <p>Whatsapp</p>
                             </a>
                         </li>
