--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- TAG INDEXAÇÃO DO GOOGLE SEARCH CONSOLE -->
+    <meta name="google-site-verification" content="bbPU3z2XnrKyz1ePvdFmOyxYy-qIXn4BpaNsAPoe8Vk" /> 
     <title>Tom Lins P.O</title>
 
     <!-- ICONE DA ABA -->
