--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <article>
                     <div class="intro">
                         <p><span>A</span>s tecnologias estão em constante evolução, e isso ocorre em uma velocidade extraordinária. Apenas os meios analógicos já não dão mais conta de suprir as necessidades da vida moderna, onde tudo está integrado a internet e ao alcance de poucos cliques ou toques.</p>
-                        <p>Como um estudante das tecnologias de design e desenvolvimento, trago em forma de portifólio orgânico meus aprendizados e descobertas, aplicados a minha própria identidade visual e alguns outros projetos. Sempre buscando destacar as forças da marca e da personalidade a serem representadas.</p>
+                        <p>Como um estudante das tecnologias de design e desenvolvimento, trago em forma de portfólio orgânico meus aprendizados e descobertas, aplicados a minha própria identidade visual e alguns outros projetos. Sempre buscando destacar as forças da marca e da personalidade a serem representadas.</p>
                         <p>Com isso em mente, voltei meu foco em direção ao futuro, buscando aperfeiçoar as minhas habilidades com a meta de construir soluções inteligentes para trazer o seu negócio para o mundo digital, aumentando assim o seu alcance.</p>
                     </div>
                 </article>
@@ -284,7 +284,7 @@
                             <article id="donate">
                             <a href="https://nubank.com.br/pagar/rgif/NiHVpgBV6e">
                                 <figure>
-                                    <abbr title="Incentive se puder, ter um segundo monitor alavancará meu poder de produção ">
+                                    <abbr title="Incentive se puder, melhorias no setup alavancarão meu poder de produção ">
                                         <img src="./assets/img/qr-pix.png" alt="QR Code Pix para doar qualquer quantia e me ajudar a comprar um monitor secundário">
                                         <figcaption>Apoie-me</figcaption>
                                     </abbr>
