feat(nav): enhance navigation with portal animation and RPG-Me link

--- a/update.html
+++ b/update.html
@@ -19,7 +19,13 @@
                 <div class="div6"> 6</div>
                 <div class="div7"> 7</div>
                 <div class="div8"> 8</div>
-                <div class="div9"> 9</div>
+                <div class="div9"> <a id="portal" href="#rpg_me">
+                    <div class="cssload-loader">
+                        <div class="cssload-inner cssload-one"></div>
+                        <div class="cssload-inner cssload-two"></div>
+                        <div class="cssload-inner cssload-three"></div>
+                    </div>
+                </a></div>
             </div>
         </nav>
     </header>
@@ -36,7 +42,7 @@
                 <div class="play" data-splitting>PLAY</div>
                 <div class="name">RPG-Me</div>
                 <div class="enter">
-                    <a href="http://">-Press to explore-</a>
+                    <a href="https://rpg-me-tomadus.vercel.app/">-Press to explore-</a>
                 </div>
             </div>
         </section>
